# Gemini

./: .gitignore  GEMINI.md  README.md
cases/001_Theodore/: GEMINI.md
cases/horary/: README.md
cases/template/: ENCYCLOPEDIA.md  GEMINI.md
core/: DOCTRINE.md  DOCTRINE_EXTENDED.md  IDENTITY_PROTOCOLS.md  LOOP.md  PROFILER.md  PROFILER_EXTENDED.md  PROTOCOL_VIOLATION.md  PROTOCOL_VIOLATION_LOG_002.md  REALIZATIONS.md  SYSTEM_SPECS.md
environment/: OPTIONAL_TOOLS.md  README.md  SOP.md  requirements.txt
environment/TEMPLATES/: FINAL_AUDIT_TEMPLATE.md
environment/projects/cardano-engine/: README.md  pyproject.toml
environment/projects/cardano-engine/examples/: horary_example.json  natal_example_timezone.json
environment/projects/cardano-engine/src/cardano_engine/: aspects.py  cli.py  dignity.py  engine.py  math_utils.py  report.py  sop.py  swisseph_utils.py
environment/scripts/: analyze_decans.py  bootstrap.sh  calculate_draconic.py  calculate_extended_vedic.py  calculate_natal.py  calculate_prognostics.py  calculate_vedic.py  debug_flatlib.py  deep_scan.py  harmonize.py  horary_generator.py  lint_workspace.py  organize_archive.py  quick_check.py  sweph_manifest.py  update_transits.py  verify_all_geometry.py  verify_angularity.py  verify_aries_zero.py  verify_love_geometry.py  verify_me_points.py
environment/tables/: traditional_tables.json
scratches/: calculate_juno.py  calculate_radar_points.py  deep_vibration_audit.py  destiny_logic.py  ghost_frequency_audit.py  magnetism_contradiction.py  obsession_math.py  radar_audit.py  viability_audit.py
(+98 files in other folders)
